--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 *{
   box-sizing: border-box;
+
+  @media screen and (orientation: portrait){
+    font-size: 20px;
+  }
+  
 }
