--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ body {
   font-size: 30px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 
