--- a/src/Components/About-me/about-me.styles.scss
+++ b/src/Components/About-me/about-me.styles.scss
@@ -70,8 +70,14 @@
                 font-size: 1em;
                 border-right: 3px solid black;
                 border-bottom: 3px solid black;
+                &:disabled {
+                    background-color: white;
+                    border: none;
+                    opacity: 1 !important;
+                  }
             }
         }
+        
         div {
             img {
                 background-color: white;
