--- a/src/Components/landing-page/landing-page.styles.scss
+++ b/src/Components/landing-page/landing-page.styles.scss
@@ -1,6 +1,6 @@
 .landing-page {
     height: 100vh;
-    background: rgb(106, 235, 235);
+    // background: rgb(106, 235, 235);
     background: linear-gradient(160deg, rgba(106, 235, 235, 1) 30%, rgba(106, 235, 235, 1) 49%, rgba(255, 255, 255, 1) 49%);
     position: relative;
     
