--- a/src/Components/Navigation/navigation.styles.scss
+++ b/src/Components/Navigation/navigation.styles.scss
@@ -1,63 +1,84 @@
-.navigation {
+.nav-bar {
     position: fixed;
-    right: 0;
-    bottom: 0;
-    color: white;
-    height: 100vh;
-    width: 10vw;
-    background-color: rgba(75, 74, 74, 0.9);
-    z-index: 2;
+    width: 100vw;
     display: flex;
-
-    ul {
-        padding-left: 0;
-        display: flex;
-        align-content: center;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        flex-direction: column;
-        list-style: none;
-        width: 100%;
+    justify-content: space-between;
+    z-index: 4;
+    height: 15vh;
+    transition: height 0.5s ease-in-out;
+    .navigation {
+        position: relative;
         height: 100%;
-        margin: 0;
+        width: 50%;
+        color: white;
+        z-index: 2;
+        display: flex;
 
-        @media screen and (orientation:portrait) {
+        @media all and (orientation :portrait) {
+            height: unset;
+            position: fixed;
+            top: unset;
+            bottom: 0;
+            width: 100vw;
+            background-color: rgba(0, 0, 0, 0.6);
+        }
+
+        ul {
+            padding-left: 0;
+            display: flex;
+            align-content: center;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            flex-direction: column;
+            list-style: none;
+            width: 100%;
+            height: 100%;
+            margin: 0;
             flex-direction: row;
-        }
 
-        li {
-            // background-color: rgba(7, 7, 7, 0.2);
-            border-radius: 50%;
-            position: relative;
-            height: 60px;
-            width: 60px;
-            cursor: pointer;
 
-            svg {
-                height: 60%;
-                width: 60%;
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-                fill: rgb(255, 255, 255);
+            li {
+                border-radius: 50%;
+                position: relative;
+                height: 60px;
+                width: 60px;
+                cursor: pointer;
+
+                svg {
+                    height: 60%;
+                    width: 60%;
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                    fill: rgb(255, 255, 255);
+                }
+
+                @media screen and (orientation:portrait) {
+                    height: 40px;
+                    width: 40px;
+                }
             }
 
-            @media screen and (orientation:portrait) {
-                height: 40px;
-                width: 40px;
+            li.target-icon {
+                svg {
+                    fill: black;
+                }
             }
         }
 
-        li.target-icon {
-            svg {
-                fill: rgba(106, 235, 235, 1);
-            }
-        }
     }
 
-    @media screen and (orientation:portrait) {
-        height: 10vh;
-        width: 100vw;
+}
+
+.nav-background {
+    
+        @media all and (orientation :landscape) {
+        backdrop-filter: saturate(50%)  blur(4px);
+        background-color: rgba(0, 0, 0, 0.6);
+        height: 12vh;
+        svg{
+            fill: aqua;
+        }
     }
 }
