--- a/src/Components/Button/button.styles.scss
+++ b/src/Components/Button/button.styles.scss
@@ -1,13 +1,13 @@
 .button{
     font-size: 0.9em;
     color: white;
-    background-color: rgb(61, 61, 61);
+    background-color: rgb(0, 0, 0);
     border-radius: 6px;
     padding: 10px;
     cursor: pointer;
     &:hover{
-        background-color: rgb(101, 90, 90);
-
+        background-color: rgb(255, 255, 255);
+        color:black;
     }
 }
 
