--- a/src/Components/Projects/projects.styles.scss
+++ b/src/Components/Projects/projects.styles.scss
@@ -1,48 +1,93 @@
-.projects-section{
-    background-color: rgba(106, 235, 235, 1);
+.projects-section {
+    background-color: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgb(255, 255, 255)10%, rgb(5, 255, 255) 30%, rgb(199, 255, 248) 60%);
     width: 100vw;
     padding: 5vw;
-    .projects-display{
-        box-sizing:content-box ;
-        margin: 20px;
-        border: 2em rgba(0,0,0,0.6) solid;
-        // background-color: rgba(0,0,0,0.6);
-        border-radius: 2em;
-        width: 70vw;
-        // height: fit-content;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 60vh;
+    gap: 10vh;
+    @media all and (orientation:portrait) {
+        grid-template-columns: 1fr;
+
+    }
+
+    
+
+    .projects-display {
         padding: 0;
-        overflow: hidden;
+        position: relative;
         
         @media (orientation:portrait) {
-            border: 0.2em rgba(0,0,0,0.6) solid;
-            border-radius: 0.2em;
+            // border-radius: 0.2em;
             width: 90vw;
             margin: 20px auto;
         }
 
-        ul{
-            width: fit-content;
-            list-style: none;
+        .front,
+        .back {
+            position: relative;
+            overflow: hidden;
+            backface-visibility: hidden;
+            transition: transform 0.5s ease-in-out;
             display: flex;
-            padding: 0;
-            margin: 0;
-            
-            li{
-                height: fit-content;
-                display: block;
-                width: 70vw;
-                flex-shrink: 0;
-                padding: 0;
-                @media (orientation:portrait) {
-                    width: 90vw;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            box-shadow: 0 0 10px 2px #000000;
+            border-radius: 30px;
+        }
+
+        .front {
+            transform: rotateY(0deg);
+            div{
+                flex-grow: 1;
+                background: linear-gradient(to bottom, white 60%, rgba(255, 255, 255, 0.4));
+                width: 100%;
+                @media screen and (orientation:portrait) {
+                    padding-top: 10%;
                 }
-                img{
-                    max-width: 100%;
-                    height: auto;
-                    margin: 0;
-                    display: block;
+                // padding-top: 10%;
+                h2{
+                    width: 100%;
+                    text-align: center;
+                    font-size: 1em;
+                }
+                p{
+                    font-size: 0.6em;
+                    width: 100%;
+                    text-align: center;
                 }
             }
+
+            img {
+                flex-grow: 0;
+                bottom: 0;
+                max-width: 100%;
+                height: auto;
+            }
+
+        }
+
+        .back {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            bottom: 100%;
+            background-color: black;
+            color: aliceblue;
+            transform: rotateY(-180deg);
+            justify-content: center;
+            align-items: center;
+
+        }
+
+        &:hover .front {
+            transform: rotateY(180deg);
+        }
+
+        &:hover .back {
+            transform: rotateY(0deg);
         }
     }
 }
