--- a/src/Components/Navigation/navigation.styles.scss
+++ b/src/Components/Navigation/navigation.styles.scss
@@ -62,7 +62,7 @@
 
             li.target-icon {
                 svg {
-                    fill: black;
+                    fill: rgba(106, 235, 235, 1);
                 }
             }
         }
