--- a/src/Components/landing-page/landing-page.styles.scss
+++ b/src/Components/landing-page/landing-page.styles.scss
@@ -1,25 +1,33 @@
+@import '../../index';
 .landing-page {
     height: 100vh;
-    // background: rgb(106, 235, 235);
-    background: linear-gradient(160deg, rgba(106, 235, 235, 1) 30%, rgba(106, 235, 235, 1) 49%, rgba(255, 255, 255, 1) 49%);
     position: relative;
+
     
     .landing-page-title {
         opacity: 0;
         position: absolute;
         top: 30vh;
-        @media (orientation:portrait) {
-            top: 20vh;
+        @media screen and (orientation :portrait) {
+            width: 80vw;
         }
         text-shadow: 2px 2px 4px rgba(0,0,0,0.5), -2px -2px 4px rgba(255,255,255,0.5);
+        transform: scaleX(110%);
         h1{
-            font-size: 1.6em;
-            color: white;
+            font-size: 2.5em;
+            color: rgb(0, 0, 0);
+            text-align:unset;
+            display: inline;
         }
+        span{
+            font-size: inherit;
+            color:$contract;
+        }
+
         p{
-            font-size: 1.2em;
-            color: aliceblue;
-            margin-bottom: 50px;
+            font-size: 0.8em;
+            color: rgb(0, 0, 0);
+            margin: 0px;
         }
     }
 }
