--- a/src/Components/Button/button.styles.scss
+++ b/src/Components/Button/button.styles.scss
@@ -1,13 +1,32 @@
+@import '../../index.scss';
 .button{
+    transition: background-color 0.5s linear;
+    height: 2em;
+    line-height: 2em;
     font-size: 0.9em;
     color: white;
-    background-color: rgb(0, 0, 0);
+    background-color: $contract;
     border-radius: 6px;
-    padding: 10px;
+    padding: 0 20px;
     cursor: pointer;
+    border: solid $contract;
+    svg{
+        display: inline-block;
+        height: 70%;
+        transform: translateY(20%);
+        margin-left: 10px;
+        fill:white;
+    }
     &:hover{
-        background-color: rgb(255, 255, 255);
-        color:black;
+        background-color: transparent;
+        color:$contract;
+        svg{
+            fill:$contract;
+        }
+    }
+
+    & .contact-me{
+        background-color: black ;
     }
 }
 
