--- a/src/Components/Navigation/navigation.styles.scss
+++ b/src/Components/Navigation/navigation.styles.scss
@@ -1,3 +1,5 @@
+@import '../../index';
+
 .nav-bar {
     position: fixed;
     width: 100vw;
@@ -6,24 +8,16 @@
     z-index: 4;
     height: 15vh;
     transition: height 0.5s ease-in-out;
+    background-color: darken($mainColor, 2%);
     .navigation {
         position: relative;
         height: 100%;
-        width: 50%;
-        color: white;
+        width: 100%;
+        color: black;
         z-index: 2;
         display: flex;
-
-        @media all and (orientation :portrait) {
-            height: unset;
-            position: fixed;
-            top: unset;
-            bottom: 0;
-            width: 100vw;
-            background-color: rgba(0, 0, 0, 0.6);
-        }
-
-        ul {
+            
+            ul {
             padding-left: 0;
             display: flex;
             align-content: center;
@@ -38,12 +32,16 @@
 
 
             li {
+                width: max-content;
                 border-radius: 50%;
                 position: relative;
-                height: 60px;
                 width: 60px;
+                
+                p{
+                    line-height: 15vh;
+                    margin: 0;
+                }
                 cursor: pointer;
-
                 svg {
                     height: 60%;
                     width: 60%;
@@ -51,7 +49,7 @@
                     left: 50%;
                     top: 50%;
                     transform: translate(-50%, -50%);
-                    fill: rgb(255, 255, 255);
+                    fill: rgb(0, 0, 0);
                 }
 
                 @media screen and (orientation:portrait) {
@@ -62,7 +60,11 @@
 
             li.target-icon {
                 svg {
-                    fill: rgba(106, 235, 235, 1);
+                    fill: $contract;
+                }
+
+                p{
+                    color:darken($contract, 5%)
                 }
             }
         }
@@ -72,13 +74,7 @@
 }
 
 .nav-background {
-    
-        @media all and (orientation :landscape) {
-        background: linear-gradient(rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.5) 70%,transparent);
+        background:rgba(darken($mainColor, 10%), 0.8);
         backdrop-filter: blur(4px);
         height: 12vh;
-        svg{
-            fill: aqua;
-        }
     }
-}
