--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+$mainColor: rgb(223, 250, 255);
+$contract:rgb(255, 105, 25);
+$adjacent: rgb(141, 253, 219);
 body {
   margin: 0;
   font-family: 'Fira Sans', sans-serif;
@@ -5,15 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
-  .header{
-    display: block;
-    padding: 20px;
-    width: 100vw;
-    text-align: center;
-    margin: 10vh 0;
-    color: rgb(0, 0, 0);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5), -2px -2px 4px rgba(255, 255, 255, 0.5);
-  }
+  background-color: $mainColor;
 }
 
 
