--- a/src/Components/About-me/about-me.styles.scss
+++ b/src/Components/About-me/about-me.styles.scss
@@ -24,13 +24,12 @@
             padding: 0;
             border-radius: 10px;
             div {
-
+                transition: transform ease-in 0.5s;
                 height: 100%;
                 margin: 0;
                 padding: 20px;
                 background-color: darken($mainColor, 6%);
                 width: 80vw;
-                transition: transform;
 
                 &:hover {
                     transform: translate(3%, 5%);
