--- a/src/Components/Projects/projects.styles.scss
+++ b/src/Components/Projects/projects.styles.scss
@@ -65,9 +65,9 @@ h1{
                     font-size: 1em;
                 }
                 p{
-                    font-size: 0.3em;
-                    // width: 100%;
-                    // text-align: center;
+                    font-size: 0.6em;
+                    width: 100%;
+                    text-align: center;
                 }
             }
 
@@ -92,6 +92,7 @@ h1{
             transform: rotateY(-180deg);
             justify-content: center;
             align-items: center;
+            font-size: 0.8em;
             h2{
                 position: absolute;
                 top:0.1em;
